# rustlab

./: Cargo.toml
.github/workflows/: zero2prod-general.yml
aoc/2020/01-report-repair/: Cargo.toml
ark/: Cargo.toml
ark/src/: lib.rs
ark/tests/: ark.rs
async_testing/: Cargo.toml
async_testing/src/: lib.rs
benches/: Cargo.toml
benches/benches/: delayed_drops.rs  jit_functions.rs  json_from_liquidctl.rs
benches/data/: mock_liquidctl_field_full.json  mock_liquidctl_key_tuple.json  mock_liquidctl_raw.json
camb/: Cargo.toml
camb/src/: main.rs
canned/: Cargo.toml
canned/src/: lib.rs  str_things.rs
collections/: Cargo.toml
collections/src/: hash_map.rs
desctruct-slice/: Cargo.toml
desctruct-slice/src/: lib.rs
destructure_slice/: Cargo.toml
destructure_slice/src/: lib.rs
disassembly/: Cargo.toml  README
disassembly/src/: lib.rs  main.rs
errors/: Cargo.toml
errors/src/: box_of_dyn_error.rs  lib.rs  newtype_string.rs  newtype_string_error.rs  string.rs  testing.rs
generic_largest/: Cargo.toml
generic_largest/src/: main.rs
gtk-silly-window/: Cargo.toml
gtk-silly-window/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_cargo/benches/: libtest.rs
hello_server/: 404.html  Cargo.toml  hello.html
hello_server/src/: main.rs  thread_pool.rs
hello_server2/: Cargo.toml
hello_server2/src/: main.rs  thread_pool.rs
hello_world/: main
hidapi/: Cargo.toml
hidapi/src/: main.rs
lifetime_variance/: Cargo.toml
lifetime_variance/src/: lib.rs  strtok.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
nrc_techniques/: Cargo.toml  README
nrc_techniques/src/: lib.rs
num_enum/: Cargo.toml
num_enum/src/: lib.rs
pointers/: Cargo.toml  README
pointers/src/: main.rs
prime-sieve/: Cargo.toml  README  run_all_impl.sh
prime-sieve/src/: lib.rs  main.rs
randomness/: Cargo.toml
randomness/src/: main.rs
reading-liquidctl-json/: Cargo.toml
reading-liquidctl-json/src/: main.rs
rustlings/exercises/: quiz1.rs  quiz3.rs  quiz4.rs
rustlings/exercises/clippy/: clippy1.rs
rustlings/exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs  using_as.rs
rustlings/exercises/enums/: enums3.rs
rustlings/exercises/error_handling/: errors1.rs
rustlings/exercises/generics/: generics1.rs  generics3.rs
rustlings/exercises/option/: option2.rs
rustlings/exercises/primitive_types/: primitive_types2.rs  primitive_types3.rs
rustlings/exercises/tests/: tests3.rs
short-miri-runs/: Cargo.toml
short-miri-runs/tests/: cast_const_to_mut_ptr.rs
simple-graph/: Cargo.toml
simple-graph/src/: adj_vecs1.rs  lib.rs
sintable/: Cargo.toml  README
sintable/.cargo/: config.toml
sintable/src/: main.rs
sqlx/hello_sqlx/: Cargo.toml
sqlx/hello_sqlx/src/: main.rs
src/: main.rs
statistics/: Cargo.toml
statistics/src/: main.rs
strings/: Cargo.toml  README
strings/src/: lib.rs
target_feature/: Cargo.toml
target_feature/src/: main.rs
zero-copy-json/: Cargo.toml  example.json
zero-copy-json/src/: main.rs
zero2prod/: Cargo.toml
zero2prod/src/: lib.rs  main.rs
zero2prod/tests/: health_check.rs
zipf/: Cargo.toml
zipf/src/: main.rs
(+12 files in other folders)
