[workspace]
members = [
	"errors",
	"generic_largest",
	"guessing_game",
	"hello_cargo",
	"hello_server",
	"minigrep",
	"nrc_techniques",
	"statistics",
]
exclude = [
	# explicitly excluded (in case they get accidentally included)
	"hello_world",  # doesn't use cargo
	"rustlings",    # checked with `cargo run -- verify`, not cargo test
]
