[package]
name = "benches"
version = "0.1.0"
authors = ["Jonas Malaco <jonas@protocubo.io>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "delayed_drops"
harness = false

[[bench]]
name = "json_from_liquidctl"
harness = false

[[bench]]
name = "jit_functions"
harness = false
