[package]
name = "reading-liquidctl-json"
version = "0.1.0"
authors = ["Jonas Malaco <jonas@protocubo.io>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "liquidctl-sensors"

[dependencies]
colored = "2.0"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[profile.release]
codegen-units = 1
lto = true
