[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Jonas Malaco <jonas@protocubo.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "zero2prod"

[dependencies]
actix-rt = "1.1"
actix-web = "3.1"
serde = "1.0"
tokio = "0.2"

[dev-dependencies]
reqwest = "0.10"

[profile.release]
lto = "thin"
debug = true
