[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Jonas Malaco <jonas@protocubo.io>"]
edition = "2018"

[lib]

[[bin]]
name = "zero2prod"

[dependencies]
actix-rt = "1.1"
actix-web = "3.3"
serde = "1.0"

[dev-dependencies]
reqwest = "0.10"
tokio = "0.2"

[profile.release]
debug = true
lto = "thin"
