[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Jonas Malaco <jonas@protocubo.io>"]
edition = "2018"

[lib]

[[bin]]
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.5"
serde = "1.0"

[dev-dependencies]
actix-rt = "2.2"
reqwest = "0.11"
tokio = "1.0"

[profile.release]
debug = true
lto = "thin"
