[package]
name = "hello_sqlx"
version = "0.1.0"
authors = ["Jonas Malaco <jonas@protocubo.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "0.2", features = [ "macros" ] }
